--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ loggingInterceptor = "4.9.1"
 material = "1.10.0"
 activity = "1.9.3"
 constraintlayout = "2.1.4"
+mockitoInline = "5.4.0"
 mockk = "1.13.13"
 navigationFragmentKtx = "2.8.4"
 navigationUiKtx = "2.8.4"
@@ -39,6 +40,7 @@ androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navi
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 mockito-core = { module = "org.mockito:mockito-core", version = "4.5.1" }
+mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "4.0.0" }
 mockito-android = { module = "org.mockito:mockito-android", version = "4.5.1" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version = "1.6.4" }
